# ravynos

./: +MANIFEST.airyx  +MANIFEST.helium  +MANIFEST.template  .cirrus.yml  .dmrc  .gitignore  .xinitrc  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FuryBSD-README.txt  LICENSE  Makefile  Makefile.airyx  Makefile.inc1  Makefile.ravynOS  ObsoleteFiles.inc  PHILOSOPHY.md  README.CN.MD  README.CN.md  README.DE.md  README.FA.md  README.HU.MD  README.HU.md  README.ID.md  README.IT.md  README.KR.md  README.PL.md  README.RO.md  README.TR.md  README.md  README.pt_BR.md  README.zh_CN.md  README.zh_TW.md  RELNOTES  SCREENSHOTS.md  SPONSORS.md  UPDATING  build.sh  dhcpcd.conf  (+38 more)
Frameworks/CoreFoundation/: CFArray.m  CFAttributedString.h  CFBag.h  CFBase.h  CFBase.m  CFBinaryHeap.h  CFBitVector.m  CFBundle.m  CFByteOrder.h  CFCalendar.h  CFCalendar.m  CFCharacterSet.m  CFData.h  CFData.m  CFDate.h  CFDate.m  CFDateFormatter.h  CFDictionary.h  CFDictionary.m  CFError.h  CFFileDescriptor.h  CFFileDescriptor.m  CFLocale.h  CFMachPort.h  CFMachPort.m  CFMessagePort.m  CFNotificationCenter.h  CFNotificationCenter.m  CFNumber.h  CFNumberFormatter.h  CFNumberFormatter.m  CFPlugIn.h  CFPreferences.h  CFPreferences.m  CFPropertyList.h  CFPropertyList.m  CFRunLoop.h  CFSocket.h  CFSocket.m  CFStream.h  (+24 more)
lib/libepoll-shim/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  epoll-shim-interpose.pc.cmakein  epoll-shim.pc.cmakein
lib/libpng/: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  example.c  libpng.3  libpngpf.3  png.5
lib/libtiff/: CMakeLists.txt  HOWTO-RELEASE  Makefile  Makefile.am  Makefile.in  TODO  aclocal.m4  autogen.sh  configure  configure.ac  libtiff-4.pc.in  placeholder.h
lib/libudev-devd/: .cirrus.yml  .gitignore  Makefile  Makefile.am  README  autogen.sh  configure.ac  libudev.h  libudev.pc.in  meson.build  meson_options.txt  tree.h  udev-device.c  udev-device.h  udev-enumerate.c  udev-filter.c  udev-filter.h  udev-hwdb.c  udev-list.c  udev-list.h  udev-monitor.c  udev-queue.c  udev-test.c  udev-utils.c  udev-utils.h  udev.c  udev.h  utils-gpl.c  utils-gpl.h  utils.c  utils.h
libobjc2/: ANNOUNCE  ANNOUNCE.1.0  ANNOUNCE.1.3  ANNOUNCE.1.6  ANNOUNCE.1.7  ANNOUNCE.1.8  ANNOUNCE.1.8.1  ANNOUNCE.1.9  API  CMakeLists.txt  Protocol2.m  arc.mm  associate.m  block_trampolines.S  blocks_runtime.h  category.h  category_loader.c  class.h  constant_string.h  eh_personality.c  eh_trampoline.cc  gc_boehm.c  gc_none.c  hash_table.h  hooks.c  legacy_malloc.c  loader.c  module.h  objc_msgSend.S  objc_msgSend.arm.S  protocol.c  sendmsg2.c  statics_loader.c  string_hash.h  type_encoding_cases.h  unwind.h  visibility.h
libobjc2/CMake/: CMakeLists.txt
libobjc2/Test/: AllocatePair.m  ConstantString.m  FastARC.m  ForeignException.m  GNUmakefile  NilException.m  PropertyIntrospectionTest2_arc.m  ResurrectInDealloc_arc.m  SuperMethodMissing.m  WeakImportClass.m  WeakReferences_arc.m  ivar_arc.m  minRep1.mm  zeroSizedIVar.m
libobjc2/objc/: Availability.h  encoding.h  runtime.h
libs-back/: .cvsignore  .gitignore  ANNOUNCE  CODEOWNERS  COPYING.LIB  ChangeLog  GNUmakefile  GNUmakefile.postamble  INSTALL  NEWS  README  Version  back.make.in  config.h.in  config.make.in  configure  configure.ac  gnustep-back.spec.in  install.sh  wayland-regenerate.sh
libs-back/Documentation/: GNUmakefile  announce.texi  install.texi  news.texi  readme.texi
libs-back/Fonts/: GNUmakefile  GNUmakefile.postamble
libs-back/Source/: .cvsignore  GNUmakefile  GNUmakefile.postamble  GNUmakefile.preamble  GSBackend.m
libs-back/Tools/: .cvsignore  GNUmakefile  GNUmakefile.postamble  GNUmakefile.preamble  font_cacher.1  font_cacher.m  gpbs.1  gpbs.m  win32pbs.m  xpbs.m
libs-gui/: .cvsignore  .gitignore  .travis.yml  ANNOUNCE  BUGS  CODEOWNERS  ChangeLog  ChangeLog.1  ChangeLog.2  ChangeLog.3  ChangeLog.4  ChangeLog.5  GNUmakefile  GNUmakefile.postamble  INSTALL  MISSING  NEWS  README  Version  config.make.in  configure  configure.ac  gnustep-gui.spec.in  gui.make.in  travis-deps.sh
libs-gui/ColorPickers/: .cvsignore  GNUmakefile  GSCMYKColorPicker.h  GSCMYKColorPicker.m  GSCMYKColorPicker.tiff  GSColorSliderCell.h  GSColorSliderCell.m  GSGrayColorPicker.h  GSGrayColorPicker.m  GSGrayColorPicker.tiff  GSHSBColorPicker.h  GSHSBColorPicker.m  GSHSBColorPicker.tiff  GSNamedColorPicker.m  GSNamedColorPicker.tiff  GSRGBColorPicker.h  GSRGBColorPicker.m  GSRGBColorPicker.tiff  GSStandardColorPicker.h  GSStandardColorPicker.m  GSWheelColorPicker.m  GSWheelColorPicker.tiff
libs-gui/Documentation/: .cvsignore  GNUmakefile  GNUmakefile.postamble  GSSpeechRecognitionServer.1  GSSpeechServer.1  Gui.gsdoc  GuiAdditions.gsdoc  ReleaseNotes.gsdoc  announce.texi  gclose.1  gcloseall.1  gopen.1  install.texi  make_services.1  news.texi  readme.texi  say.1  set_show_service.1  todo.texi
libs-gui/Images/: .cvsignore  GNUmakefile  GNUstep.tiff  GNUstepMenuImage.tiff  GSContextualMenuCursor.tiff  GSDisappearingItemCursor.tiff  GSDragCopyCursor.tiff  GSDragLinkCursor.tiff  GSGreenArrowCursor.tiff  GSOperationNotAllowedCursor.tiff  GSSearch.tiff  GSStop.tiff  LogoGNUstep.tiff  MagnifyGlass.tiff  NSAddTemplate.tiff  NSAdvanced.tiff  NSCaution.tiff  NSColorPanel.tiff  NSComboArrow.tiff  NSFontPanel.tiff  NSInfo.tiff  NSPreferencesGeneral.tiff  NSRatingLevelIndicator.tiff  NSRemoveTemplate.tiff  NSUserAccounts.tiff  common_2DCheckMark.tiff  common_2DDash.tiff  common_3DArrowDown.tiff  common_3DArrowLeft.tiff  common_3DArrowRight.tiff  common_3DArrowRightH.tiff  common_3DArrowUp.tiff  common_ApplicationFolder.tiff  common_ArrowDown.tiff  common_ArrowDownH.tiff  common_ArrowLeft.tiff  common_ArrowLeftH.tiff  common_ArrowRight.tiff  common_ArrowRightH.tiff  common_ArrowUp.tiff  (+107 more)
libs-gui/KeyBindings/: DefaultKeyBindings.dict  GNUmakefile
libs-gui/Model/: .cvsignore  Controller.h  Controller.m  GMAppKit.m  GMArchiveObjects.m  GMArchiver.m  GNUmakefile  IBClasses.h  test.m  (+9 more)
sysmenu/: CMakeLists.txt  Makefile  Messages.sh  README
(+65307 files in other folders)
